--- a/ring_hassio/Dockerfile
+++ b/ring_hassio/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --no-cache \
     ffmpeg \
     git && \
     cd / && \
-    git clone https://github.com/jeroenterheerdt/ring-hassio && \
+    git clone https://github.com/kerimc/ring-hassio.git && \
     cd ring-hassio/ring_hassio && \
     npm install --unsafe-perm && \
     chmod a+x run.sh
