--- a/ring_hassio/config.json
+++ b/ring_hassio/config.json
@@ -3,9 +3,9 @@
     "version": "1.35",
     "slug": "ringlivestream",
     "description": "A Home Assistant add-on to enable live streams of Ring Cameras.",
-    "url": "https://github.com/jeroenterheerdt/ring-hassio",
+    "url": "https://github.com/kerimc/ring-hassio",
     "startup": "application",
-    "init": "false"
+    "init": "false",
     "arch": [
       "aarch64",
       "amd64",
